# kevoree-cpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  HelperCompare.h  NOTES.md  README.md  android.sh  boostrapmodel.json  build.sh  clean.sh  clean_cmake_files.sh  cpp-kevoree-geany  generate_model.sh  generate_models.sh  install.sh  main.cpp  model.kevs  pom.xml  run.sh  setenv.sh
kevoree-core/: CMakeLists.txt
kevoree-core/api/: AbstractChannel.h  AbstractComponent.h  AbstractGroup.h  AbstractNodeType.h  AbstractTypeDefinition.h  Bootstraper.h  CompareCoreVisitors.h  IDynamicLoader.h  KevScriptService.h  KevoreeCoreBean.h  KevoreeListeners.h  KevoreeModelHandlerService.h  ModelListener.h  ModelUpdateCallback.h  NodeType.h  PortHandler.h  PreCompare.h  PrimitiveCommand.h
kevoree-core/api/adaptation/: AdaptationConfiguration.h  AdaptationModel.h  AdaptationPrimitive.h  ParallelStep.h
kevoree-core/api/queues/: README.md
kevoree-core/core/: .gitignore  CMakeLists.txt  CompareCoreVisitors.h  KevoreeCoreBean.cpp  KevoreeCoreBean.h  KevoreeListeners.h  PreCompare.h
kevoree-core/core/api/: AbstractComponent.h  AbstractGroup.h  AbstractNodeType.h  AbstractTypeDefinition.h  Bootstraper.h  IDynamicLoader.h  INodeType.h  KevoreeModelHandlerService.h  ModelHandlerLockCallBack.h  ModelListener.h  ModelUpdateCallBackReturn.h  NodeType.h  PrimitiveCommand.h  UUIDModel.h
kevoree-core/core/impl/: CompareCoreVisitors.cpp  KevoreeCoreBean.cpp  KevoreeListeners.cpp  PreCompare.cpp
kevoree-core/impl/: KevoreeCoreBean.cpp
kevoree-core/kcl/: CClassLoader.cpp  CClassLoader.h
kevoree-core/kevscript/: .gitignore  CMakeLists.txt  generate.sh  kev
kevoree-core/kevscript/api/: KevScriptEngine.h  waxeyeParser.h
kevoree-core/kevscript/src/: KevScriptEngine.cpp  KevScriptEngine.h  parser.c  parser.h
kevoree-core/kevscript/waxeye/: Waxeye.c  run.c  waxeyeParser.c
kevoree-core/model/: .gitignore  CMakeLists.txt  clean.sh  generate.sh
kevoree-core/model/adaptation/: AdaptationModel.cpp  AdaptationPrimtive.cpp
kevoree-core/model/kevoree/: Channel.h  ChannelType.h  ComponentInstance.h  ComponentType.h  ContainerNode.h  ContainerRoot.h  DefaultkevoreeFactory.h  DeployUnit.h  Dictionary.h  DictionaryAttribute.h  DictionaryType.h  DictionaryValue.h  FragmentDictionary.h  Group.h  GroupType.h  Instance.h  MBinding.h  MessagePortType.h  NamedElement.h  NetworkInfo.h  NetworkProperty.h  NodeLink.h  NodeNetwork.h  NodeType.h  Operation.h  Package.h  Parameter.h  Port.h  PortType.h  PortTypeMapping.h  PortTypeRef.h  Repository.h  ServicePortType.h  TypeDefinition.h  TypeLibrary.h  TypedElement.h  Value.h  _Namespace.h  classes.cpp  kevoree.h
kevoree-core/model/metamodel/: kevoree.adaptation.ecore  kevoree.ecore
kevoree-core/src/: CompareCoreVisitors.cpp  KevoreeCoreBean.cpp  KevoreeListeners.cpp  PreCompare.cpp
kevoree-core/src/adaptation/: AdaptationConfiguration.cpp  AdaptationModel.cpp  ParallelStep.cpp
kevoree-library/: .gitignore  CMakeLists.txt  lib.json  pom.xml
kevoree-library/Apache2Wrapper/: CMakeLists.txt
kevoree-library/Apache2Wrapper/src/: DpkgManager.cpp  DpkgManager.h
kevoree-library/CPPNodeType/: .gitignore  CMakeLists.txt  CPPNodeType.cpp  CPPNodeType.h  CommandMapper.cpp  HelperCompare.h  Makefile  Planner.cpp  Planner.h  lib.json  pom.xml  sender.sh
kevoree-library/CPPNodeType/command/: AddInstanceCommand.h  StartInstanceCommand.h
kevoree-library/CPPNodeType/deploy/: PrimitiveCommandExecutionHelper.h
kevoree-library/CPPNodeType/src/: CPPNodeType.cpp  CPPNodeType.h  CommandMapper.cpp  CommandMapper.h  Planner.cpp  Planner.h  Primitives.h
kevoree-library/DpkgManager/src/: DpkgManager.cpp  DpkgManager.h
kevoree-library/FacialRecognation/: pom.xml
kevoree-library/HelloWorldComponent/: .gitignore  CMakeLists.txt  lib.json  pom.xml
kevoree-library/HelloWorldComponent/src/: HelloWorldComponent.cpp  HelloWorldComponent.h
kevoree-library/WebSocketGatewayTCP/: CMakeLists.txt  Makefile  cmake_install.cmake
kevoree-library/WebSocketGatewayTCP/src/: WebSocketGatewayTCPComponent.cpp  WebSocketGatewayTCPComponent.h
kevoree-library/WebSocketGroup/: .gitignore  CMakeLists.txt  lib.json  pom.xml
kevoree-library/WebSocketGroup/src/: WebSocketGroup.cpp  WebSocketGroup.h
kevoree-library/cppNode/: .gitignore  CMakeLists.txt  pom.xml
kevoree-library/facialRecognation/: CMakeLists.txt  pom.xml
kevoree-library/fakeConsole/: pom.xml
kevoree-library/fakeconsole/: CMakeLists.txt
kevoree-library/helloWorldComponent/: pom.xml
kevoree-library/helloworldcomponet/: .gitignore  CMakeLists.txt  pom.xml
kevoree-library/sharedMemoryChannel/: CMakeLists.txt  pom.xml
kevoree-library/webSocketGroup/: client.cpp  pom.xml
kevoree-library/websocketgroup/: CMakeLists.txt  pom.xml  server.cpp
kevoree-logger/: CMakeLists.txt
kevoree-logger/src/: Logger.cpp
kevoree-platform/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
kevoree-platform/KevoreeBootStrap/: KevoreeBootStrap.cpp  KevoreeBootStrap.h
kevoree-platform/android/: main.cpp
kevoree-platform/base/: KevoreeBootStrap.cpp  KevoreeBootStrap.h
kevoree-platform/standalone/: main.cpp
kevoree-tools/: CMakeLists.txt  Makefile  cmake_install.cmake
kevoree-tools/BootstrapHelper/: NodeTypeBootstrapHelper.cpp  NodeTypeBootstrapHelper.h
kevoree-tools/CreateTypeDefinition/: .gitignore  CMakeLists.txt
kevoree-tools/DeployUnitLoader/: CClassLoader.h
kevoree-tools/DynamicLoader/: DynamicLoader.cpp  DynamicLoader.h
kevoree-tools/DynamicLoader_v0/: DynamicLoader.cpp
kevoree-tools/HttpClient/: CMakeLists.txt  Makefile  cmake_install.cmake
kevoree-tools/HttpClient/src/: main.cpp
kevoree-tools/PluginPragma/: CMakeLists.txt
kevoree-tools/java/: pom.xml
kevoree-tools/preprocessor/: pom.xml
tests/: CMakeLists.txt  boostrapmodel.json  compilepragma.sh  cppunit-report.xml  jedModel1.json  jedModel2.json  main.cpp  model_src.json  plugin-pragma-gcc.c  pragma  test  test.c
tests/src/: CTestTestfile.cmake  kmf1.cpp  model_channel_fakeconsole.json  run_tests.cpp
toolchain/: .gitignore  (+6 more)
(+184 files in other folders)
